--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,7 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:22.2.0'
 
+    compile 'com.google.apis:google-api-services-pubsub:v1-rev5-1.20.0'
     //compile 'com.google.android.gms:play-services:7.8.0'
     //compile 'com.google.android.gms:play-services-base:7.8.0'
     compile 'com.google.android.gms:play-services-plus:7.8.0'
