--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,6 @@ gradle-app.setting
 
 # Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
 !gradle-wrapper.jar
+My Project-c96b5d2e6f43-service-account.json
+not_used_client_secret_397649079392-stovq4hmrh66rbbsfgtskkntqlija6fr.apps.googleusercontent.com.json
+topic.txt
